--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('dist/service-worker.js')
+                navigator.serviceWorker.register('service-worker.js', {
+                    scope: './'
+                })
                     .then(registration => {
                         console.log('ServiceWorker registration successful');
                     })
