--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#ff69b4">
     <meta name="description" content="Daily Love Reminder">
     <title>Daily Love Reminder</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icon-192x192.png">
+    <link rel="stylesheet" href="/DailyLoveReminder/styles.css">
+    <link rel="manifest" href="/DailyLoveReminder/manifest.json">
+    <link rel="apple-touch-icon" href="/DailyLoveReminder/icon-192x192.png">
 </head>
 <body>
     <div id="container">
@@ -38,6 +38,6 @@
     </script>
     
     <!-- Load our compiled JavaScript files -->
-    <script src="dist/app.js"></script>
+    <script src="/DailyLoveReminder/dist/app.js"></script>
 </body>
 </html>
