--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/DailyLoveReminder/dist/service-worker.js', {
+                navigator.serviceWorker.register('/DailyLoveReminder/service-worker.js', {
                     scope: '/DailyLoveReminder/'
                 })
                     .then(registration => {
@@ -38,6 +38,6 @@
     </script>
     
     <!-- Load our compiled JavaScript files -->
-    <script src="/DailyLoveReminder/dist/app.js"></script>
+    <script src="/DailyLoveReminder/app.js"></script>
 </body>
 </html>
